# lock-pomodoro

./: .gitignore  AGENTS.md  README.md  lock_pomodoro.spec  main.py  pyproject.toml
scripts/: generate_assets.py
src/lock_pomodoro/: __init__.py  app.py  engine.py  lockscreen.py  menubar.py
tests/: test_engine.py  test_lockscreen.py
